...
                    indicatorType: Indicator.ballPulseSync,
                    colors: [CustomColors.primary],
                  ),
                ),
                const SizedBox(height: 8),
                Text(
                  "Loading...",
                  key: const Key("loadingText"),
                  style: TextStyles.poppinsMedium14.copyWith(
                    color: CustomColors.secondary
                  ),
                )
              ],
...
                                                        ),
                                                        const SizedBox(height: 32),
                                                        Row(
                                                          children: [
                                                            Expanded(
                                                              child: ElevatedButton(
                                                                key: const Key("dismissButton"),
                                                                onPressed: () {
                                                                  Navigator.of(context, rootNavigator: true).pop();
                                                                },
                                                                style: ElevatedButton.styleFrom(
                                                                  elevation: 0,
                                                                  minimumSize: Size.zero,
...
